--- a/index.html
+++ b/index.html
@@ -1,1 +1,165 @@
-<!--A website with video background and academic researcher type css-->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125811997-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-125811997-1');
+  </script>
+  
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>Darshit Desai</title>
+  <meta content="" name="descriptison">
+  <meta content="" name="keywords">
+
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
+
+  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="assets/css/lighttheme.css" rel="stylesheet">
+
+  <!-- MathJax CSS | JS File -->
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+ <script>
+  window.onload = function() {
+    //considering there aren't any hashes in the urls already
+    if(!window.location.hash) {
+        //setting window location
+        window.location = window.location + '#home';
+        //using reload() method to reload web page
+        window.location.reload();
+    }
+}
+</script>
+
+
+  <script type="text/javascript">
+  $(document).ready(function() {
+    $('.carousel').carousel({interval: 7000});
+  });
+</script>
+  <!-- =======================================================
+  * Template Name: Personal - v2.2.0
+  * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
+</head>
+
+<body>
+
+  <!-- ======= Header ======= -->
+  <header id="header" class="header-tops">
+    <div class="container">   
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <a class="mr-auto"> 
+        <!-- <img src="http://prg.cs.umd.edu/img/logo/prg-black.png" class="img-fluid" width="10%"><img src="http://prg.cs.umd.edu/img/logo/umd-logo-white.png" class="img-fluid" width="7%">  -->
+        <h1><a href="index.html"><span>Darshit Desai </span></a></h1>
+<!--         <h2>Computer Science Ph.D. Student<br>Perception & Robotics Group (PRG)<br>University of Maryland, College Park </h2> -->
+        <nav class="nav-menu d-none d-lg-block">
+          <ul>
+            <li class="active"><a href="index.html#home">Home</a></li>
+            <!-- <li><a title="Latest News" href="news.html#news" style="color: #147cc2; border-style: solid; background-color:rgb(255, 255, 0); border-color: rgb(255, 0, 0); padding-left:4px;padding-right:4px; border-radius: 10px; font-weight: 500;">News</a></li> -->
+            <li><a title="Know About Me" href="about.html#about">About</a></li>
+            <li><a title="Recent Research" href="research.html#research">Research</a></li>
+          </ul>
+
+        </nav><!-- .nav-menu -->
+
+        <div class="social-links">
+
+            </div>
+
+          </div>
+         </header><!-- End Header -->
+
+
+
+         <!-- ======= Video Background ======= -->
+
+        <video poster="" id="bgvid" playsinline autoplay muted loop>
+          
+          <!-- <source src="http://thenewcode.com/assets/videos/polina.mp4" type="video/mp4">  -->
+          <source src="assets/img/videos/background3.mp4" type="video/mp4"> 
+        </video>
+
+        <video poster="" id="bgvid" playsinline autoplay muted loop>
+          <!-- <source src="http://thenewcode.com/assets/videos/polina.mp4" type="video/mp4">  -->
+            <source src="assets/img/videos/background.mp4" type="video/mp4"> 
+        </video>
+
+       
+              <!-- ======= Home Section for Empty Landing Page ======= -->
+              <section id="home" class="about">
+                <div class="about-me container" style="background: rgba(0, 0, 0, 0); color: rgb(255, 255, 255); margin-top:30px;">
+                  <div index-title><img src="assets/img/umd-black.png" class="img-fluid" width="15%" style="-moz-box-shadow: 15px 15px 15px #000000; background-color: rgba(255,255,255,0.5);
+                  -webkit-box-shadow: 15px 15px 15px #8b8b8b;
+                  box-shadow: 5px 5px 25px #303030;
+                  -moz-border-radius:10px;
+                  -webkit-border-radius:10px;
+                  border-radius:50%; padding: 10px"> 
+                  <!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="" style="font-size: 60px; font-weight: 1000; -webkit-text-stroke: 1.2px rgb(0, 0, 0); text-shadow: 0px 0px 20px rgba(0, 0, 0, .7); color:white"> News </a></div>-->
+                  <br><br> 
+                  <h1 style="font-size: 60px; font-weight: 1000; -webkit-text-stroke: 1.2px rgb(0, 0, 0); text-shadow: 0px 0px 20px rgba(0, 0, 0, .7);">
+                   Darshit Desai<br>Robotics Engineer <hr></h1>
+              </section>
+
+
+
+
+
+
+
+
+  <div class="credits">
+    <!-- All the links in the footer should remain intact. -->
+    <!-- You can delete the links only if you purchased the pro version. -->
+    <!-- Licensing information: https://bootstrapmade.com/license/ -->
+    <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
+    <!-- Designed by <a href="https://bootstrapmade.com/"></a> -->
+    <div class="social-links">
+          <!-- <div class="col-6" style="justify-content: center"> -->
+           <!-- <a title="Google Scholar" href="https://scholar.google.com/citations?user=ASaUMpsAAAAJ&hl=en&oi=ao" class="ai"><i class="ai ai-google-scholar-square"></i></a> -->
+           <a title="Github" href="http://github.com/darshit-desai/" class="github"><i class="ri-github-fill"></i></a>
+           <a title="LinkedIn" href="https://www.linkedin.com/in/darshit-desai-359375b3/" class="linkedin"><i class="icofont-linkedin"></i></a>
+           <a title="Email" href="mailto:darshit@umd.edu" class="quora"><i class='ri-mail-fill'></i>
+  </div>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/jquery/jquery.min.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+  <script src="assets/vendor/counterup/counterup.min.js"></script>
+  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/venobox/venobox.min.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+
+</body>
+
+</html>
