--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Darshit Desai</title>
-  <meta content="" name="descriptison">
+  <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
@@ -53,12 +53,28 @@
 }
 </script>
 
+  <!-- jQuery and Owl Carousel JS Files -->
+  <script src="assets/vendor/jquery/jquery.min.js"></script>
+  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
 
   <script type="text/javascript">
-  $(document).ready(function() {
-    $('.carousel').carousel({interval: 7000});
-  });
-</script>
+    $(document).ready(function() {
+      $('.owl-carousel').owlCarousel({
+        loop: true,
+        margin: 0,
+        nav: true,
+        dots: false,
+        autoplay: true,
+        autoplayTimeout: 7000,
+        navText: ["<i class='icofont-rounded-left'></i>", "<i class='icofont-rounded-right'></i>"],
+        items: 1,
+        video: true, // Add this line to enable video support
+      });
+    });
+  </script>
+
+
+
   <!-- =======================================================
   * Template Name: Personal - v2.2.0
   * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
@@ -95,12 +111,13 @@
 
 
          <!-- ======= Video Background ======= -->
+          <video poster="Drones" id="bgvid1" playsinline autoplay muted loop>
+            <source src="assets/img/videos/output_extracted.mp4" type="video/mp4; codecs=avc1.42E01E,mp4a.40.2">
+          </video>
+          <!-- <video poster="" id="bgvid2" playsinline autoplay muted loop>
+            <source src="assets/img/videos/output_trimmed.mp4" type="video/mp4; codecs=avc1.42E01E,mp4a.40.2">
+          </video> -->
 
-        <video poster="" id="bgvid" playsinline autoplay muted loop>
-          
-          <!-- <source src="http://thenewcode.com/assets/videos/polina.mp4" type="video/mp4">  -->
-          <source src="assets/img/videos/all24good_2.mp4" type="video/mp4"> 
-        </video>
 
         
 
