--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125811997-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'UA-125811997-1');
   </script>
-  
+
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -23,13 +23,14 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
 
@@ -40,38 +41,20 @@
 
   <!-- MathJax CSS | JS File -->
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-  <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
- <script>
-  window.onload = function() {
-    //considering there aren't any hashes in the urls already
-    if(!window.location.hash) {
+  <script type="text/javascript" id="MathJax-script" async
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+  <script>
+    window.onload = function () {
+      //considering there aren't any hashes in the urls already
+      if (!window.location.hash) {
         //setting window location
         window.location = window.location + '#home';
         //using reload() method to reload web page
         window.location.reload();
+      }
     }
-}
-</script>
-
-  <!-- jQuery and Owl Carousel JS Files -->
-  <script src="assets/vendor/jquery/jquery.min.js"></script>
-  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-
-  <script type="text/javascript">
-    $(document).ready(function() {
-      $('.owl-carousel').owlCarousel({
-        loop: true,
-        margin: 0,
-        nav: true,
-        dots: false,
-        autoplay: true,
-        autoplayTimeout: 7000,
-        navText: ["<i class='icofont-rounded-left'></i>", "<i class='icofont-rounded-right'></i>"],
-        items: 1,
-        video: true, // Add this line to enable video support
-      });
-    });
   </script>
+  <script src="assets/vendor/jquery/jquery.min.js"></script>
 
 
 
@@ -87,9 +70,9 @@
 
   <!-- ======= Header ======= -->
   <header id="header" class="header-tops">
-    <div class="container">   
+    <div class="container">
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a class="mr-auto"> 
+      <a class="mr-auto">
         <!-- <img src="http://prg.cs.umd.edu/img/logo/prg-black.png" class="img-fluid" width="10%"><img src="http://prg.cs.umd.edu/img/logo/umd-logo-white.png" class="img-fluid" width="7%">  -->
         <h1><a href="index.html"><span>Darshit Desai </span></a></h1>
         <nav class="nav-menu d-none d-lg-block">
@@ -104,38 +87,69 @@
 
         <div class="social-links">
 
-            </div>
+        </div>
 
-          </div>
-         </header><!-- End Header -->
-
-
-         <!-- ======= Video Background ======= -->
-          <video poster="Drones" id="bgvid1" playsinline autoplay muted loop>
-            <source src="assets/img/videos/output_extracted.mp4" type="video/mp4; codecs=avc1.42E01E,mp4a.40.2">
-          </video>
-          <!-- <video poster="" id="bgvid2" playsinline autoplay muted loop>
-            <source src="assets/img/videos/output_trimmed.mp4" type="video/mp4; codecs=avc1.42E01E,mp4a.40.2">
-          </video> -->
-
-
-        
-
-       
-              <!-- ======= Home Section for Empty Landing Page ======= -->
-              <section id="home" class="about">
-                <div class="about-me container" style="background: rgba(0, 0, 0, 0); color: rgb(255, 255, 255); margin-top:30px;">
-                  <div index-title><img src="assets/img/umd-black.png" class="img-fluid" width="15%" style="-moz-box-shadow: 15px 15px 15px #000000; background-color: rgba(255,255,255,0.5);
+    </div>
+  </header><!-- End Header -->
+  <!-- ======= Home Section for Empty Landing Page ======= -->
+  <section id="home" class="about">
+    <div class="about-me container" style="background: rgba(0, 0, 0, 0); color: rgb(255, 255, 255); margin-top:30px;">
+      <div index-title><img src="assets/img/umd-black.png" class="img-fluid" width="15%" style="-moz-box-shadow: 15px 15px 15px #000000; background-color: rgba(255,255,255,0.5);
                   -webkit-box-shadow: 15px 15px 15px #8b8b8b;
                   box-shadow: 5px 5px 25px #303030;
                   -moz-border-radius:10px;
                   -webkit-border-radius:10px;
-                  border-radius:50%; padding: 10px"> 
-                  <!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="" style="font-size: 60px; font-weight: 1000; -webkit-text-stroke: 1.2px rgb(0, 0, 0); text-shadow: 0px 0px 20px rgba(0, 0, 0, .7); color:white"> News </a></div>-->
-                  <br><br> 
-                  <h1 style="font-size: 60px; font-weight: 1000; -webkit-text-stroke: 1.2px rgb(0, 0, 0); text-shadow: 0px 0px 20px rgba(0, 0, 0, .7);">
-                   Darshit Desai <hr></h1>
-              </section>
+                  border-radius:50%; padding: 10px">
+        <!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="" style="font-size: 60px; font-weight: 1000; -webkit-text-stroke: 1.2px rgb(0, 0, 0); text-shadow: 0px 0px 20px rgba(0, 0, 0, .7); color:white"> News </a></div>-->
+        <br><br>
+        <h1
+          style="font-size: 60px; font-weight: 1000; -webkit-text-stroke: 1.2px rgb(0, 0, 0); text-shadow: 0px 0px 20px rgba(0, 0, 0, .7);">
+          Darshit Desai
+          <hr>
+        </h1>
+  </section>
+
+
+  <!-- ======= Video Background ======= -->
+  <div id="myCarousel" class="carousel slide" data-interval="false">
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <div class="video-container">
+          <video controls autoplay muted class="myvid" id="player">
+            <source src="assets/img/videos/output_extracted.mp4" type="video/mp4">
+          </video>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <div class="video-container">
+          <video controls autoplay muted class="myvid" id="player1">
+            <source src="assets/img/videos/output__overlayvideo.mp4" type="video/mp4">
+          </video>
+        </div>
+      </div>
+    </div>
+
+    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Vorige</span>
+    </a>
+    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Volgende</span>
+    </a>
+  </div>
+
+
+
+
+
+
 
 
 
@@ -151,26 +165,26 @@
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
     <!-- Designed by <a href="https://bootstrapmade.com/"></a> -->
     <div class="social-links">
-          <!-- <div class="col-6" style="justify-content: center"> -->
-           <!-- <a title="Google Scholar" href="https://scholar.google.com/citations?user=ASaUMpsAAAAJ&hl=en&oi=ao" class="ai"><i class="ai ai-google-scholar-square"></i></a> -->
-           <a title="Github" href="http://github.com/darshit-desai/" class="github"><i class="ri-github-fill"></i></a>
-           <a title="LinkedIn" href="https://www.linkedin.com/in/darshit-desai-359375b3/" class="linkedin"><i class="icofont-linkedin"></i></a>
-           <a title="Email" href="mailto:darshit@umd.edu" class="quora"><i class='ri-mail-fill'></i>
-  </div>
+      <!-- <div class="col-6" style="justify-content: center"> -->
+      <!-- <a title="Google Scholar" href="https://scholar.google.com/citations?user=ASaUMpsAAAAJ&hl=en&oi=ao" class="ai"><i class="ai ai-google-scholar-square"></i></a> -->
+      <a title="Github" href="http://github.com/darshit-desai/" class="github"><i class="ri-github-fill"></i></a>
+      <a title="LinkedIn" href="https://www.linkedin.com/in/darshit-desai-359375b3/" class="linkedin"><i
+          class="icofont-linkedin"></i></a>
+      <a title="Email" href="mailto:darshit@umd.edu" class="quora"><i class='ri-mail-fill'></i>
+    </div>
 
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/jquery/jquery.min.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-  <script src="assets/vendor/counterup/counterup.min.js"></script>
-  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/venobox/venobox.min.js"></script>
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/jquery/jquery.min.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
+    <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+    <script src="assets/vendor/counterup/counterup.min.js"></script>
+    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="assets/vendor/venobox/venobox.min.js"></script>
 
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+    <!-- Template Main JS File -->
+    <script src="assets/js/main.js"></script>
 
 </body>
 
