--- a/index.html
+++ b/index.html
@@ -115,12 +115,11 @@
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
         <div class="video-container">
-          <video controls autoplay muted class="myvid" id="player">
+          <video autoplay muted class="myvid" id="player">
             <source src="assets/img/videos/output_extracted.mp4" type="video/mp4">
           </video>
         </div>
@@ -128,7 +127,7 @@
 
       <div class="carousel-item">
         <div class="video-container">
-          <video controls autoplay muted class="myvid" id="player1">
+          <video autoplay muted class="myvid" id="player1">
             <source src="assets/img/videos/output__overlayvideo.mp4" type="video/mp4">
           </video>
         </div>
