--- a/about.html
+++ b/about.html
@@ -129,11 +129,11 @@
             <div class="row">
                 <div class="col-lg-4" data-aos="fade-right">
 
-                    <center>
+                    <!-- <center>
                         <img src="assets/img/chahat-13.jpg" style="border-radius: 4%;" class="img-fluid" alt=""><br>
-                        <hr> <img src="http://prg.cs.umd.edu/img/logo/prg-black.png" class="img-fluid" width="40%"><img
+                        <hr> <img src="" class="img-fluid" width="40%"><img
                             src="assets/img/umd-black.png" class="img-fluid" width="40%">
-                    </center>
+                    </center> -->
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                     <h1><b>Darshit Desai</b>
