--- a/about.html
+++ b/about.html
@@ -214,59 +214,79 @@
 
             </div><!-- End About Me -->
             <div id="teaching" class="resume">
-            <div class="container" style="background:#fff">
-                <div class="section-title">
-                    <h2></h2>
-                    <p>Work Experience</p>
+    <div class="container" style="background:#fff">
+        <div class="section-title">
+            <h2></h2>
+            <p>Work Experience</p>
+        </div>
+        <div class="row" style="background:#fafafa;border-radius:8px;padding-top:6px; padding-left:3%">
+            <div class="col-lg-6">
+                <!-- <h3 class="resume-title"></h3> --><br>
+                <div class="resume-item pb-0">
+                    <h3><b>Assistant Manager, Press Manufacturing Engineering Division</b></h3>
+                    <h3><b>Suzuki Motor Gujarat Private Limited</b></h3>
+                    <h5>July 2018 - Aug 2022</h5>
+                    <p>Projects Undertaken at SMG:</p>
+                    <ul>
+                        <li>New Product development:
+                            <ul>
+                                <li>Supported in achieving production targets by identifying machine related modifications and completing it before the start of vehicle’s mass production.</li>
+                                <li>Design of material handling skids, pallets and jigs for New Vehicle Model die tooling. Acted as a point person for standardizing designs of various material handling equipment.</li>
+                                <li>Supported ramp up phase of Baleno, Swift and Dzire models (1000 vehicles/day production volume models) with timely delivery of the required skids, pallets and fixtures.</li>
+                                <li>Ensured customer feedback after handover is implemented on to the next car model preparation by revising standards and maintaining issue tracking lists.</li>
+                            </ul>
+                        </li>
+                        <li>IOT System:
+                            <ul>
+                                <li>Developing a SCADA based system for collecting quality related data from Press Machine with the end goal of integrating industry 4.0 features.</li>
+                                <li>Analyzed data collected from the IOT system to establish Process control methods like Statistical process control to generate system based alarms for defective parts.</li>
+                            </ul>
+                        </li>
+                        <li>Crack Monitoring System:
+                            <ul>
+                                <li>Implemented a vision based sheet metal crack detection system where 20 cameras were used to detect surface defects on sheet metal car components.</li>
+                                <li>Performed user acceptance testing of the software and hardware to recommend further development and modifications in image recognition, capturing and storing codes.</li>
+                            </ul>
+                        </li>
+                        <li>Integration of Crack Monitoring System and Press machine:
+                            <ul>
+                                <li>Applied MODBUS protocol for integration of the Press machine with the above system.</li>
+                                <li>Programmed Press machine Digital I/Os for development of part recipe change management software and successfully tested synchronization with Press machine.</li>
+                            </ul>
+                        </li>
+                        <li>New Facility Establishment:
+                            <ul>
+                                <li>Instrumental in establishing a green field plant of 250,000 vehicles/year.</li>
+                                <li>Handled 50+ vendors working under the same roof for Installation & commissioning of Servo Press Machines and other allied equipment of New Stamping Press Shops.</li>
+                                <li>Streamlined progress with internal stakeholders like the Civil and Utility team to achieve the target of commissioning as per the timeline.</li>
+                            </ul>
+                        </li>
+                        <li>Particle Counter System:
+                            <ul>
+                                <li>Installed Laser based particle counters at various locations and conceptualized the PLC network design.</li>
+                                <li>Assessed particle count and to establish clean rooms in areas of high importance and high contamination inside the Press shop to achieve defect rate reduction.</li>
+                            </ul>
+                        </li>
+                        <li>Stamping Press Final Goods Traceability system:
+                            <ul>
+                                <li>Devised architecture and flow of a system which integrated the vehicle tracking data like VIN with Press shop raw material data into a Centralized repository for back tracing.</li>
+                                <li>Coordinated with 3 different shop production teams in getting feedback during design and benchmarking of the system.</li>
+                            </ul>
+                        </li>
+                        <li>Promotions: Joined as Graduate Engineer Trainee in 2018, Promoted to Junior Manager in 2019. Promoted for the second time as Assistant Manager in 2020.</li>
+                    </ul>
                 </div>
-                <div class="row" style="background:#fafafa;border-radius:8px;padding-top:6px; padding-left:3%">
-
-                    <div class="col-lg-6">
-                        <!-- <h3 class="resume-title"></h3> --><br>
-                        <div class="resume-item pb-0">
-                            <h3><b>Assistant Manager, Press Manufacturing Engineering Division</b></h3>
-                            <h3><b>Suzuki Motor Gujarat Private Limited</b></h3>
-                            <h5>July 2018 - Aug 2022</h5>
-                            <p>Projects Undertaken at SMG:
-New Product development: 
-Supported in achieving production targets by identifying machine related modifications and completing it before the start of vehicle’s mass production.
-Design of material handling skids, pallets and jigs for New Vehicle Model die tooling. Acted as a point person for standardizing designs of various material handling equipment. 
-Supported ramp up phase of Baleno, Swift and Dzire models (1000 vehicles/day production volume models) with timely delivery of the required skids, pallets and fixtures. 
-Ensured customer feedback after handover is implemented on to the next car model preparation by revising standards and maintaining issue tracking lists.
-IOT System: 
-Developing a SCADA based system for collecting quality related data from Press Machine with the end goal of integrating industry 4.0 features. 
-Analyzed data collected from the IOT system to establish Process control methods like Statistical process control to generate system based alarms for defective parts.
-Crack Monitoring System: 
-Implemented a vision based sheet metal crack detection system where 20 cameras were used to detect surface defects on sheet metal car components.
-Performed user acceptance testing of the software and hardware to recommend further development and modifications in image recognition, capturing and storing codes.
-Integration of Crack Monitoring System and Press machine: 
-Applied MODBUS protocol for integration of the Press machine with the above system.  
-Programmed Press machine Digital I/Os for development of part recipe change management software and successfully tested synchronization with Press machine.
-
-New Facility Establishment: 
-Instrumental in establishing a green field plant of 250,000 vehicles/year. 
-Handled 50+ vendors working under the same roof for Installation & commissioning of Servo Press Machines and other allied equipment of New Stamping Press Shops.
-Streamlined progress with internal stakeholders like the Civil and Utility team to achieve the target of commissioning as per the timeline.
-Particle Counter System: 
-Installed Laser based particle counters at various locations and conceptualized the PLC network design.
-Assessed particle count and to establish clean rooms in areas of high importance and high contamination inside the Press shop to achieve defect rate reduction.
-Stamping Press Final Goods Traceability system: 
-Devised architecture and flow of a system which integrated the vehicle tracking data like VIN with Press shop raw material data into a Centralized repository for back tracing. 
-Coordinated with 3 different shop production teams in getting feedback during design and benchmarking of the system.
-Promotions: Joined as Graduate Engineer Trainee in 2018, Promoted to Junior Manager in 2019. Promoted for the second time as Assistant Manager in 2020.
-</p>
-
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6">
-                        <center>
-                            <img src="assets/img/suzuki_logo_img.gif" width="50%" style="padding-top: 5%;">
-                        </center>
-                    </div>
-                </div>
-                <br>
             </div>
+            <div class="col-lg-6">
+                <center>
+                    <img src="assets/img/suzuki_logo_img.gif" width="50%" style="padding-top: 5%;">
+                </center>
+            </div>
+        </div>
+        <br>
+    </div>
+</div>
+
 
 
 
