--- a/about.html
+++ b/about.html
@@ -217,7 +217,7 @@
     <div class="container" style="background:#fff">
         <div class="section-title">
             <h2></h2>
-            <p>Work Experience</p>
+            <p><a href="#work-experience">Work Experience</a></p>
         </div>
         <div class="row" style="background:#fafafa;border-radius:8px;padding-top:6px; padding-left:3%">
             <div class="col-lg-6">
