Update about section and remove research html

--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
             <li class="active"><a href="index.html#home">Home</a></li>
             <!-- <li><a title="Latest News" href="news.html#news" style="color: #147cc2; border-style: solid; background-color:rgb(255, 255, 0); border-color: rgb(255, 0, 0); padding-left:4px;padding-right:4px; border-radius: 10px; font-weight: 500;">News</a></li> -->
             <li><a title="Know About Me" href="about.html#about">About</a></li>
-            <li><a title="Recent Research" href="research.html#research">Research</a></li>
           </ul>
 
         </nav><!-- .nav-menu -->
@@ -170,8 +169,8 @@
       <!-- <a title="Google Scholar" href="https://scholar.google.com/citations?user=ASaUMpsAAAAJ&hl=en&oi=ao" class="ai"><i class="ai ai-google-scholar-square"></i></a> -->
       <a title="Github" href="http://github.com/darshit-desai/" class="github"><i class="ri-github-fill"></i></a>
       <a title="LinkedIn" href="https://www.linkedin.com/in/darshit-desai-359375b3/" class="linkedin"><i
-          class="icofont-linkedin"></i></a>
-      <a title="Email" href="mailto:darshit@umd.edu" class="quora"><i class='ri-mail-fill'></i>
+              class="icofont-linkedin"></i></a>
+      <a title="Email" href="mailto:desai0681@gmail.com" class="quora"><i class='ri-mail-fill'></i>
     </div>
 
     <!-- Vendor JS Files -->
