Update about.html with photos

--- a/about.html
+++ b/about.html
@@ -127,12 +127,9 @@
 
             <div class="row">
                 <div class="col-lg-4" data-aos="fade-right">
-
-                    <!-- <center>
-                        <img src="assets/img/chahat-13.jpg" style="border-radius: 4%;" class="img-fluid" alt=""><br>
-                        <hr> <img src="" class="img-fluid" width="40%"><img
-                            src="assets/img/umd-black.png" class="img-fluid" width="40%">
-                    </center> -->
+                    <center>
+                        <img src="https://media.licdn.com/dms/image/v2/C5103AQEhi07OIsaD_A/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1521818141631?e=2147483647&v=beta&t=QGITA9GcSCpiriRO9912c-E3__r-8fPcRl50BsClsY4" style="border-radius: 10%; width: 100%; max-width: 300px; border: 4px solid #d32f2f; padding: 8px;" class="img-fluid" alt="Darshit Desai">
+                    </center>
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                     <h1><b>Darshit Desai</b>
