--- a/about.html
+++ b/about.html
@@ -193,6 +193,10 @@
                     <ul>
                         <li>Designed and validated Hobbywing X9 propulsion system test setups, leveraging CAN and UART for synchronized telemetry logging and fault injection across multiple motor drives.</li>
                         <li>Automated FOC firmware stress testing with Python scripts simulating PX4-style slew rate constraints, generating new PWM sequences every 25 runs for dynamic test coverage.</li>
+                        <li>Performed tuning of the sensorless FOC drive and improved motor efficiency from 85 % in Astro Prime to 92 % in Astro Max motor propeller pairings.</li>
+                        <li>Designed state of the art sensorless drive firmware for the Astro MAX motor drives. Complete system design from STM32 bootloaders to app firmware.>/li>
+                        <li>Tuning of Sensorless FOC drive, with custom python tools for testing like 1 kHz CANbus telemetry logging and drive actuation commands. Automated noise injection, cycle testing and lifecycle stress testing of the propeller power plant.</li>
+                        </li>
                     </ul>
                 </div>
             </div>
