Robotics project page add

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <li class="active"><a href="index.html#home">Home</a></li>
             <!-- <li><a title="Latest News" href="news.html#news" style="color: #147cc2; border-style: solid; background-color:rgb(255, 255, 0); border-color: rgb(255, 0, 0); padding-left:4px;padding-right:4px; border-radius: 10px; font-weight: 500;">News</a></li> -->
             <li><a title="Know About Me" href="about.html#about">About</a></li>
+            <li><a title="Robotics Projects" href="RoboticsProjects.html#projects">Robotics Projects</a></li>
           </ul>
 
         </nav><!-- .nav-menu -->
