--- a/about.html
+++ b/about.html
@@ -84,8 +84,9 @@
                 <!--         <h2>Computer Science Ph.D. Student<br>Perception & Robotics Group (PRG)<br>University of Maryland, College Park </h2> -->
                 <nav class="nav-menu d-none d-lg-block">
                     <ul>
-                        <li class="active"><a href="index.html#home">Home</a></li>
-                        <li><a title="Know About Me" href="about.html#about">About</a></li>
+                        <li><a href="index.html#home">Home</a></li>
+                        <li class="active"><a title="Know About Me" href="about.html#about">About</a></li>
+                        <li><a title="Robotics Projects" href="RoboticsProjects.html#projects">Robotics Projects</a></li>
                     </ul>
                 </nav><!-- .nav-menu -->
 
