Add project slides

--- a/RoboticsProjects.html
+++ b/RoboticsProjects.html
@@ -38,9 +38,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/lighttheme.css" rel="stylesheet">
 
-  <!-- MathJax CSS | JS File -->
-  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-  <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
   <script>
     window.onload = function() {
       if(!window.location.hash || window.location.hash === '#') {
@@ -127,6 +124,17 @@
           </div>
         </div>
 
+      </div>
+
+      <!-- Presentation Subsection -->
+      <div class="section-title mt-5">
+        <h2></h2>
+        <p>Project Presentation</p>
+      </div>
+      <hr>
+
+      <div class="presentation-container" style="text-align: center; margin: 20px 0 40px 0;">
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR6gJyZws-k4q76fReVLesganE92vNPs-fsif_4EI7ateg5OUTAgryN8ji7Gxm0VQ/pubembed?start=true&loop=true&delayms=60000" frameborder="0" width="100%" height="569" style="max-width: 960px; margin: 0 auto; display: block;" allow="autoplay; encrypted-media; accelerometer; gyroscope; clipboard-write; web-share" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
       </div>
 
     </div>
