--- a/about.html
+++ b/about.html
@@ -37,31 +37,33 @@
 
     <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
 
-    <!-- Template Main CSS File -->
-    <link href="assets/css/lighttheme.css" rel="stylesheet">
+  <!-- Template Main CSS File -->
+  <link href="assets/css/lighttheme.css" rel="stylesheet">
 
+  <style>
+    .section-title {
+      position: relative;
+    }
+    .section-title .heading-link {
+      opacity: 0;
+      margin-left: 8px;
+      transition: opacity 0.2s;
+      color: #149ddd;
+      text-decoration: none;
+      font-size: 0.8em;
+    }
+    .section-title:hover .heading-link {
+      opacity: 1;
+    }
+    section.about {
+      min-height: 100vh;
+    }
+  </style>
+  
     <!-- MathJax CSS | JS File -->
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script type="text/javascript" id="MathJax-script" async
         src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
-    <script>
-        window.onload = function () {
-            //considering there aren't any hashes in the urls already
-            if (!window.location.hash) {
-                //setting window location
-                window.location = window.location + '#about';
-                //using reload() method to reload web page
-                window.location.reload();
-            }
-        }
-    </script>
 
-
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('.carousel').carousel({ interval: 7000 });
-        });
-    </script>
     <!-- =======================================================
   * Template Name: Personal - v2.2.0
   * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
@@ -123,7 +125,7 @@
 
             <div class="section-title">
                 <h2></h2>
-                <p>About Me</p>
+                <p>About Me<a href="#about" class="heading-link" aria-label="Link to About Me section"><i class="bx bx-link-alt"></i></a></p>
             </div>
 
             <div class="row">
@@ -133,10 +135,9 @@
                     </center>
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-                    <h1><b>Darshit Desai</b>
-                        <h1>
-                            <hr>
-                            <h3 style="font-size: 1.2rem;"><b>Robotics Engineer</b></h3>
+                    <h1><b>Darshit Desai</b></h1>
+                    <hr>
+                    <h3 style="font-size: 1.2rem;"><b>Robotics Engineer</b></h3>
                             <h4 style="font-size: 0.95rem;"><a href="http://umd.edu/">University of Maryland, College Park</a> | <a href="https://www.freeflysystems.com/">Freefly Systems</a></h4>
                             <hr>
                             <p class="font-italic" style="text-align: justify;">
@@ -149,18 +150,18 @@
                                    <a title="LinkedIn" href="https://www.linkedin.com/in/darshit-desai-359375b3/"
                                         class="linkedin"><i class="icofont-linkedin"></i></a>
                                     <a title="Email" href="mailto:desai0681@gmail.com" class="quora"><i
-                                            class='ri-mail-fill'></i>
-                                </div>
-                            </div>
-                </div>
+                                            class='ri-mail-fill'></i></a>
+                                </div><!-- close justify-content -->
+                            </div><!-- close align-center -->
+                </div><!-- close col-lg-8 -->
+            </div><!-- close row -->
 
-            </div>
-        </div><br>
-        <div id="teaching" class="resume">
+        </div><br><!-- close about-me container -->
+        <div class="resume">
     <div class="container" style="background:#fff">
-        <div class="section-title">
+        <div class="section-title" id="work-experience">
             <h2></h2>
-            <p><a href="#work-experience">Work Experience</a></p>
+            <p>Work Experience<a href="#work-experience" class="heading-link" aria-label="Link to Work Experience section"><i class="bx bx-link-alt"></i></a></p>
         </div>
 
         <!-- Freefly Systems Experience -->
@@ -330,11 +331,11 @@
 </div>
 
         <!-- Educational Lineage Section -->
-        <div id="teaching" class="resume">
+        <div class="resume">
             <div class="container" style="background:#fff">
-                <div class="section-title">
+                <div class="section-title" id="educational-lineage">
                     <h2></h2>
-                    <p>Educational Lineage</p>
+                    <p>Educational Lineage<a href="#educational-lineage" class="heading-link" aria-label="Link to Educational Lineage section"><i class="bx bx-link-alt"></i></a></p>
                 </div>
                 <div class="row" style="background:#fafafa;border-radius:8px;padding-top:6px; padding-left:3%">
 
@@ -391,12 +392,12 @@
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
         <!-- Designed by <a href="https://bootstrapmade.com/"></a> -->
         <div class="social-links">
-            <!-- <div class="col-6" style="justify-content: center"> -->
             <a title="Github" href="http://github.com/darshit-desai/" class="github"><i class="ri-github-fill"></i></a>
             <a title="LinkedIn" href="https://www.linkedin.com/in/darshit-desai-359375b3/" class="linkedin"><i
                     class="icofont-linkedin"></i></a>
-            <a title="Email" href="mailto:desai0681@gmail.com" class="quora"><i class='ri-mail-fill'></i>
-        </div>
+            <a title="Email" href="mailto:desai0681@gmail.com" class="quora"><i class='ri-mail-fill'></i></a>
+        </div><!-- close social-links -->
+    </div><!-- close credits -->
 
         <!-- Vendor JS Files -->
         <script src="assets/vendor/jquery/jquery.min.js"></script>
