Added hyperlinks to sub headings

--- a/about.html
+++ b/about.html
@@ -165,10 +165,10 @@
         </div>
 
         <!-- Freefly Systems Experience -->
-        <div class="row" style="background:#fafafa;border-radius:8px;padding-top:6px; padding-left:3%; margin-bottom:15px">
+        <div class="row" id="work-experience-freefly-robotics" style="background:#fafafa;border-radius:8px;padding-top:6px; padding-left:3%; margin-bottom:15px">
             <div class="col-lg-6">
                 <div class="resume-item pb-0">
-                    <h3><b>Robotics Engineer</b></h3>
+                    <h3><b>Robotics Engineer<a href="#work-experience-freefly-robotics" class="heading-link" aria-label="Link to Freefly Robotics Engineer position"><i class="bx bx-link-alt"></i></a></b></h3>
                     <h3><b>Freefly Systems Inc.</b></h3>
                     <h5>June 2024 - Nov 2025</h5>
                     <p><b><a href="https://freeflysystems.com/flux">Freefly FLUX LiDAR</a>:</b></p>
@@ -210,10 +210,10 @@
         </div>
 
         <!-- Teaching Assistant Experience -->
-        <div class="row" style="background:#fafafa;border-radius:8px;padding-top:6px; padding-left:3%; margin-bottom:15px">
+        <div class="row" id="work-experience-teaching-assistant" style="background:#fafafa;border-radius:8px;padding-top:6px; padding-left:3%; margin-bottom:15px">
             <div class="col-lg-6">
                 <div class="resume-item pb-0">
-                    <h3><b>Teaching Assistant, Matrix Air Land Sea Lab</b></h3>
+                    <h3><b>Teaching Assistant, Matrix Air Land Sea Lab<a href="#work-experience-teaching-assistant" class="heading-link" aria-label="Link to Teaching Assistant position"><i class="bx bx-link-alt"></i></a></b></h3>
                     <h3><b>University of Maryland</b></h3>
                     <h5>June 2023 - May 2024</h5>
                     <ul>
@@ -236,10 +236,10 @@
         </div>
 
         <!-- Research Assistant Experience -->
-        <div class="row" style="background:#fafafa;border-radius:8px;padding-top:6px; padding-left:3%; margin-bottom:15px">
+        <div class="row" id="work-experience-graduate-researcher" style="background:#fafafa;border-radius:8px;padding-top:6px; padding-left:3%; margin-bottom:15px">
             <div class="col-lg-6">
                 <div class="resume-item pb-0">
-                    <h3><b>Graduate Student Researcher</b></h3>
+                    <h3><b>Graduate Student Researcher<a href="#work-experience-graduate-researcher" class="heading-link" aria-label="Link to Graduate Student Researcher position"><i class="bx bx-link-alt"></i></a></b></h3>
                     <h3><b>Daikin Energy Innovation Lab, CEEE, University of Maryland</b></h3>
                     <h5>December 2022 - May 2024</h5>
                     <ul>
@@ -262,11 +262,11 @@
         </div>
 
         <!-- Suzuki Motors Experience -->
-        <div class="row" style="background:#fafafa;border-radius:8px;padding-top:6px; padding-left:3%">
+        <div class="row" id="work-experience-suzuki" style="background:#fafafa;border-radius:8px;padding-top:6px; padding-left:3%">
             <div class="col-lg-6">
                 <!-- <h3 class="resume-title"></h3> --><br>
                 <div class="resume-item pb-0">
-                    <h3><b>Assistant Manager, Press Manufacturing Engineering Division</b></h3>
+                    <h3><b>Assistant Manager, Press Manufacturing Engineering Division<a href="#work-experience-suzuki" class="heading-link" aria-label="Link to Suzuki Assistant Manager position"><i class="bx bx-link-alt"></i></a></b></h3>
                     <h3><b>Suzuki Motor Gujarat Private Limited</b></h3>
                     <h5>July 2018 - Aug 2022</h5>
                     <p>Projects Undertaken at SMG:</p>
